// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should render correctly 1`] = `
<form
  class="rh-form "
/>
`;

exports[`Form should render correctly 2`] = `
<form
  class="rh-form "
>
  Hello World
</form>
`;

exports[`Form should render correctly 3`] = `
<form
  class="rh-form "
>
  <div>
    Hello
  </div>
  <div>
    World
  </div>
</form>
`;
